objects/BMCServiceDesk__SysQVFormatCondition__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__OrderIndex__c</fullName>
        <label>OrderIndex</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SYSQVFieldInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKQVFieldInfo</label>
        <referenceTo>BMCServiceDesk__SYSQVFieldInfo__c</referenceTo>
        <relationshipLabel>SysQVFormatConditions</relationshipLabel>
        <relationshipName>SysQVFormatConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SysQVFormatRule__c</fullName>
        <label>FKQVFormatRule</label>
        <referenceTo>BMCServiceDesk__SysQVFormatRule__c</referenceTo>
        <relationshipLabel>SysQVFormatConditions</relationshipLabel>
        <relationshipName>SysQVFormatConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SysQVLogicalOperator__c</fullName>
        <label>SysQVLogicalOperator</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SysQVOperator__c</fullName>
        <label>SysQVOperator</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Values__c</fullName>
        <label>Values</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>